# texpack

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
include/: texpack.hpp
spng/: spng.c
src/: pugixml.hpp  texpack.cpp
test/: CMakeLists.txt  test.cpp
