set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(texpack-test test.cpp)

if (APPLE)
    if (IOS)
        message(STATUS "Building for iOS")
    else()
        message(STATUS "Building for macOS")
    endif()
elseif(ANDROID)
    if (ANDROID_ABI STREQUAL "arm64-v8a")
        message(STATUS "Building for 64-bit Android")
    elseif (ANDROID_ABI STREQUAL "armeabi-v7a")
        message(STATUS "Building for 32-bit Android")
    else()
        message(STATUS "Building for Android")
    endif()
elseif(WIN32)
    message(STATUS "Building for Windows")
elseif(LINUX)
    message(STATUS "Building for Linux")
else()
    message(STATUS "Building for unknown platform")
endif()

target_link_libraries(texpack-test texpack)
